# Il2CppQuestTypePatching

./: .clang-format  .editorconfig  .gitignore  .gitmodules  Android.mk  Application.mk  CMakeLists.txt  CMakeSettings.json  CustomTypes.code-workspace  LICENSE  README.md  bmbfmod.json  build.ps1  buildBMBF.ps1  copy.ps1  createqmod.ps1  custom-types_v0_12_6.qmod  mod.template.json  qpm.json  qpm.shared.json  startAndLog.ps1
.github/workflows/: build-ndk.yml  publish.yml
include/: capstone-helpers.hpp  logging.hpp  macros.hpp  main.hpp  types.hpp
shared/: _config.h  coroutine.hpp  delegate.hpp  logging.hpp  macros.hpp  macros_declaretype.hpp  register.hpp  types.hpp  util.hpp
src/: NoteData.hpp  class-wrapper.cpp  coroutine.cpp  delegate.cpp  logging.cpp  main.cpp  register.cpp  test-coroutine.cpp  test.cpp  test_small.cpp  type-registration.cpp  types.cpp
